fix: article screen overflow

--- a/src/components/Ad.module.scss
+++ b/src/components/Ad.module.scss
@@ -4,6 +4,7 @@
 .bannerWrap {
   @include styleHelpers.flex('row');
   justify-content: center;
+  overflow: hidden;
 }
 
 .dev {
