--- a/src/components/Section.module.scss
+++ b/src/components/Section.module.scss
@@ -12,5 +12,4 @@
 .inside {
   width: 100%;
   max-width: calc(1000px + 22vw);
-  overflow-x: hidden;
 }
