--- a/src/styles/styleHelpers.scss
+++ b/src/styles/styleHelpers.scss
@@ -79,7 +79,6 @@
 
 @mixin unstyle {
   border: none;
-  outline: none;
   margin: 0;
   padding: 0;
   background-color: transparent;
